GUI-274 fixed dropdown flickering with css

--- a/stylesheets/less/style.less
+++ b/stylesheets/less/style.less
@@ -950,7 +950,16 @@ in order to work for the new ui. I will clean this up at some point.
     height: 0px;
     thead {
         box-shadow: 0px 1px  1px @colorShadow-black;
+        &:hover {
+            .header > .dropdownBox {
+                opacity: 0.2;
+            } 
+            .header:hover > .dropdownBox {
+                opacity: 0.6;
+            }
+        }
     }
+
     .jsonElement, .dataCol {
         background-color: @colorOpaque-dataCol !important;
     }
@@ -1230,8 +1239,7 @@ th:last-child .colGrab{
 
 ul.colMenu {
     display:none;
-    // background-color: @color-monitor-green;
-    background-color: @color-selectedCell-dark;
+    background-color: @color-white;
     position: fixed;
     z-index: 20;
 
@@ -1363,12 +1371,9 @@ ul.leftColMenu {
 }
 
 ul.subColMenu.leftColMenu {
-    left: -155px;
+    left: -170px;
+    margin-top: 0px;
     box-shadow: -1px 1px rgba(0,0,0,0.1);
-}
-
-ul.colMenu > li:first-child{
-    background-color: transparent !important;
 }
 /* END DROPDOWN STYLING */
 
